unpackaged/main/default/objects/Account/fields/A1A_Indicator__c.field-meta.xml
<CustomField>
    <fullName>A1A_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be a Boolean Y/N field .This will show type of client.if the field is Y ,client Type= A1A , for others it will show N .The field will be populated from Prudent Salesforce system, which will come from the Implementation Tracker distributed when implementing a client.</description>
    <label>A1A Indicator</label>
    <type>Checkbox</type>
</CustomField>