unpackaged/main/default/objects/Account/fields/Account_Priority_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority_Notes__c</fullName>
    <label>Account Priority Notes</label>
    <type>TextArea</type>
</CustomField>