unpackaged/main/default/objects/Account/fields/Additional_Implementation_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Implementation_Go_Live_Date__c</fullName>
    <label>Additional Implementation Go-Live Date</label>
    <type>Date</type>
</CustomField>