unpackaged/main/default/objects/Account/fields/Client_has_Members_on_Do_Not_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Client_has_Members_on_Do_Not_Call_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client has Members on Do Not Call List</label>
    <type>Checkbox</type>
</CustomField>