unpackaged/main/default/objects/Account/fields/Drug_List_Link__c.field-meta.xml
<CustomField>
    <fullName>Drug_List_Link__c</fullName>
    <formula>CASE(TEXT(Medical_Drug_List__c),
&quot;PRUDENTMED&quot;,
&quot;https://www.prudentrx.com/prudentmed/&quot;, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug List Link</label>
    <type>Text</type>
</CustomField>