unpackaged/main/default/objects/Account/fields/Emails_to_Receive_Monthly_Reports__c.field-meta.xml
<CustomField>
    <fullName>Emails_to_Receive_Monthly_Reports__c</fullName>
    <description>Userstory-1409</description>
    <label>Emails to Receive Monthly Reports</label>
    <type>TextArea</type>
</CustomField>