unpackaged/main/default/objects/Account/fields/Health_Plan_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Plan Account Executive</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Aetna Account Executive)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>