unpackaged/main/default/objects/Account/fields/Health_Plan_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Plan Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>