unpackaged/main/default/objects/Account/fields/Health_Plan_name__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_name__c</fullName>
    <label>Health Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>