unpackaged/main/default/objects/Account/fields/Health_Plan_Phone__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Phone__c</fullName>
    <label>Health Plan Phone</label>
    <type>Phone</type>
</CustomField>