unpackaged/main/default/objects/Account/fields/Implementation_Allow_Case_Routing__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Allow_Case_Routing__c</fullName>
    <formula>Implementation__r.Allow_Case_Routing__c</formula>
    <label>Implementation Allow Case Routing</label>
    <type>Checkbox</type>
</CustomField>