unpackaged/main/default/objects/Account/fields/Implementation_Allow_MBR_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Allow_MBR_Outreach__c</fullName>
    <formula>Implementation__r.Allow_MBR_Outreach__c</formula>
    <label>Implementation Allow MBR Outreach</label>
    <type>Checkbox</type>
</CustomField>