unpackaged/main/default/objects/Account/fields/Medical_Drug_List__c.field-meta.xml
<CustomField>
    <fullName>Medical_Drug_List__c</fullName>
    <label>Medical Drug List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRUDENTMED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>