unpackaged/main/default/objects/Account/fields/Member_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Member_Contacts__c</fullName>
    <description>Rollup Summary Field to catch the count of Members per Account</description>
    <inlineHelpText>Rollup Summary Field to catch the count of Members per Account</inlineHelpText>
    <label>Member Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>