unpackaged/main/default/objects/Account/fields/PBM_Name__c.field-meta.xml
<CustomField>
    <fullName>PBM_Name__c</fullName>
    <label>PBM Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caremark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>