unpackaged/main/default/objects/Account/fields/PBM_Status__c.field-meta.xml
<CustomField>
    <fullName>PBM_Status__c</fullName>
    <label>PBM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>