unpackaged/main/default/objects/Account/fields/PRx_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>PRx_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRx Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>