unpackaged/main/default/objects/Account/fields/PRx_AM_Email__c.field-meta.xml
<CustomField>
    <fullName>PRx_AM_Email__c</fullName>
    <formula>PRx_Account_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRx AM Email</label>
    <type>Text</type>
</CustomField>