unpackaged/main/default/objects/Account/fields/PRx_AM_Phone__c.field-meta.xml
<CustomField>
    <fullName>PRx_AM_Phone__c</fullName>
    <formula>PRx_Account_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRx AM Phone</label>
    <type>Text</type>
</CustomField>