unpackaged/main/default/objects/Account/fields/PRx_Customer_Care_Phone__c.field-meta.xml
<CustomField>
    <fullName>PRx_Customer_Care_Phone__c</fullName>
    <label>PRx Customer Care Phone</label>
    <type>Phone</type>
</CustomField>