unpackaged/main/default/objects/Account/fields/PRx_NSD_Name__c.field-meta.xml
<CustomField>
    <fullName>PRx_NSD_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Userstory 1409</description>
    <label>PRx NSD Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (PRx NSD Name)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>