unpackaged/main/default/objects/Account/fields/PSU_ID__c.field-meta.xml
<CustomField>
    <fullName>PSU_ID__c</fullName>
    <label>PSU ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>