unpackaged/main/default/objects/Account/fields/Secondary_AM_EM_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_AM_EM_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary AM/EM/Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Secondary AM/EM/Client Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>