unpackaged/main/default/objects/Account/validationRules/ControlNumber_Only_Contain_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>ControlNumber_Only_Contain_Numbers</fullName>
    <active>true</active>
    <description>The Control Number field can only contain numbers</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Control_Number__c)),
NOT(ISNUMBER( Control_Number__c )))</errorConditionFormula>
    <errorMessage>The Control Number can only contain numbers</errorMessage>
</ValidationRule>